--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.3",
+    "@angular/animations": "^9.1.3",
+    "@angular/cdk": "^9.2.1",
     "@angular/common": "~9.1.3",
     "@angular/compiler": "~9.1.3",
     "@angular/core": "~9.1.3",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.1.3",
+    "@angular/material": "^9.2.1",
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
